--- a/css/style.css
+++ b/css/style.css
@@ -47,5 +47,24 @@ img:hover {
 }
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
+.container{
+  width: 30%;
+  display: inline-block;
+}
+
+.small{
+  width: 100%;
+  height: 100%;
+}
+
+.medium{
+  width: 200%;
+  height: 200%;
+}
+
+.large{
+  width: 303%;
+  height: 303%;  
+}
 
 /* create your tile classes! we recommend .small .med .large */
