--- a/css/style.css
+++ b/css/style.css
@@ -47,5 +47,22 @@ img:hover {
 }
 
 /* create a column class! make sure all of the divs within 'container's have a class of 'column' */
-
+.column{
+  display: inline-block;
+  width: 30%;
+}
 /* create your tile classes! we recommend .small .med .large */
+
+.med{
+  width: 204%;
+}
+
+.small{
+  width: 100%;
+  height: 100%;
+}
+
+.large{
+  width: 200%;
+}
+
